[package]
name = "lark-openai-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.9.4"
axum = "0.6.11"
reqwest = { version = "0.11.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = "1.0.156"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
